--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * { 
     padding: 0; 
     margin: 0;
+    box-sizing: border-box;
 }
     
 body {
@@ -28,7 +29,13 @@ header {
 }
 
 .list {
+    display: flex;
+    flex-direction: column;
     display: none;
+}
+
+.list a {
+    display: block;
 }
 
 .logo .txt_fecaf {
@@ -155,20 +162,38 @@ footer {
     header {
         background-color: #05072F;
         display: flex;
-        flex-direction: row;  
-        justify-content: center;
+        flex-direction: row-reverse;  
+        justify-content: space-evenly;
         align-items: center;
-        padding: 30px 2%;
-        gap: 60px;
+        padding: 15px 1%;
     }
 
-    .list {
+    #list {
         display: block;
+        /* width: 40px; */
+    }
+
+    #linkLateral {
+        display: none;
+    }
+
+    #fechar {
+        display: none;
+    }
+
+    .list a{
+        margin: 15px 15px 15px 10px;
+        text-decoration: none;
+        color: #ffffff
+    }
+
+    .list a:hover {
+        text-decoration: underline;
     }
 
     .list i{
         color: #ffffff;
-        font-size: 35px;
+        font-size: 40px;
         cursor: pointer;
     }
 
